Fix root link vertical alignment

--- a/resources/stylesheets/layout/_header.scss
+++ b/resources/stylesheets/layout/_header.scss
@@ -93,7 +93,7 @@
   float: left;
   width: max-content;
   max-width: 100%;
-  margin-top: my.$gutter * -1;
+  margin-top: my.$gutter * -0.5;
   clear: left;
 }
 
